--- a/wrapper/ros/src/zkhy_stereo_d/CMakeLists.txt
+++ b/wrapper/ros/src/zkhy_stereo_d/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   tf
   image_transport
+  message_generation
 )
 
 ## System dependencies are found with CMake's conventions
@@ -58,11 +59,11 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
+add_service_files(
+  FILES
+  CameraParams.srv
+  RotationMatrix.srv
+)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -72,10 +73,10 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   sensor_msgs
-# )
+generate_messages(
+  DEPENDENCIES
+  sensor_msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -110,17 +111,20 @@ catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES zkhy_stereo_d
 #  DEPENDS system_lib
-  CATKIN_DEPENDS  cv_bridge roscpp rospy sensor_msgs std_msgs tf image_transport
+  CATKIN_DEPENDS  cv_bridge roscpp rospy sensor_msgs std_msgs tf image_transport message_runtime
 )
 
 ###########
 ## Build ##
 ###########
 
+find_package(OpenCV REQUIRED)
+
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
   ${catkin_INCLUDE_DIRS}
+  ${OpenCV_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
@@ -209,7 +213,10 @@ include_directories(
 # catkin_add_nosetests(test)
 
 add_executable(stereo_listener_d src/stereo_listener_d.cpp)
-target_link_libraries(stereo_listener_d ${catkin_LIBRARIES})
+target_link_libraries(stereo_listener_d
+        ${catkin_LIBRARIES}
+        ${OpenCV_LIBS}
+        )
 
 add_executable(stereo_publisher_d
         src/stereo_publisher_d.cpp
