--- a/wrapper/ros/src/zkhy_stereo_d/CMakeLists.txt
+++ b/wrapper/ros/src/zkhy_stereo_d/CMakeLists.txt
@@ -246,6 +246,7 @@ endif()
 add_executable(stereo_publisher
         src/stereo_publisher.cpp
         src/framemonitor.cpp
+        src/pointcloudgenerator.cpp
         )
 target_link_libraries(stereo_publisher
         ${catkin_LIBRARIES}
